# telink_mesh-mqtt-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
.devcontainer/: Dockerfile  back_Dockerfile  devcontainer.json  startup.sh
.github/workflows/: build_bluez_docker.yml  build_meshgateway_docker.yml
bluez-docker-test/: Dockerfile
deploy/: Docker.prod  Dockerfile.prod  docker-compose.yml  download_deploy_files.sh  startup.sh  telink_notify_fix.patch
deploy/bluez_customized/: Dockerfile  Dockerfile.prod  telink_notify_fix.patch
deploy/meshgateway/: Dockerfile  Dockerfile.prod  startup.sh
dockerfiles/bluez_customized/: Dockerfile  LICENSE
dockerfiles/meshgateway/: Dockerfile
src/: ble_poc.cpp  main.cpp
src/ble_stack/: bluezproxy.cpp  bluezproxy.h  protocol.txt  telink_gatt_profile.h  telink_mesh.cpp  telink_mesh.h  telink_mesh_protocol.h
src/crypto/: crypto.cpp  crypto.h
src/gateway/: gateway.h  mappings.h
src/logging/: log_handler.h
src/mqtt/: mqtt_client_proxy.h
tests/: test_crypto.cpp
